now unwrapping the timestamp of message correctly

--- a/static/style/messagestyle.scss
+++ b/static/style/messagestyle.scss
@@ -30,6 +30,10 @@
   color: black;
 }
 
+.other-user-name-display{
+  text-align: left;
+}
+
 .user-indicator{
   margin: 0px 5px;
 }
